# DevOps-PolyCSGames2026

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
app/: main.py  models.py  schemas.py  user.py
tests/: conftest.py  test_crud_api.py
